# ArtRAG

./: .dockerignore  .env_example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yml  models.yml  pyproject.toml
config/: config.py  logging_config.py  utils.py
e5_wikiart_small/: index.faiss  index.pkl
exps/: rag_exps.ipynb
rag_pipeline/: embeddings_collector.py
streamlit_agent/: memory_storage.py  retriever.py
